# redo-rs

./: .gitignore  Cargo.toml  NOTICE  README.md  all.do  bootstrap.sh  debug.do  justfile  release.do
.claude/memory/: MEMORY.md  feedback_no_libc.md
.github/workflows/: ci.yml
src/: builder.rs  cmd_always.rs  cmd_ifchange.rs  cmd_ifcreate.rs  cmd_log.rs  cmd_ood.rs  cmd_redo.rs  cmd_sources.rs  cmd_stamp.rs  cmd_targets.rs  cmd_unlocked.rs  cmd_whichdo.rs  cycles.rs  deps.rs  env.rs  helpers.rs  jobserver.rs  logs.rs  main.rs  options.rs  paths.rs  state.rs
t/: flush-cache.do
tests/: equivalence.rs  smoke.rs  target_dir_collision.rs
