[package]
name = "redo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust port of apenwarr/redo - a recursive build system"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
sha1_smol = "1.0"
nix = { version = "0.28", features = ["process", "signal", "fs", "term", "poll", "ioctl"] }
libc = "0.2"

[dev-dependencies]
hegel = { git = "https://github.com/hegeldev/hegel-rust", package = "hegeltest" }

[profile.release]
opt-level = 2
